--- a/style/common.css
+++ b/style/common.css
@@ -98,33 +98,28 @@ nav > ul > li:last-child {
   border-right: 3px solid #111;
 }
 
-main {
-  background: #cfcfcf;
-  color: black;
-  padding: 20px 0;
-  flex-grow: 1;
-}
-
-.mainArea {
+nav > div .mainArea {
   width: 100%;
+  height: 200px;
   background: #000;
 }
 
-.post {
+nav > div .post {
   margin: 0 auto;
-  width: 500px;
+  width: 320px;
+  height: 100%;
 }
 
-.photoSet .slideshow {
-  width: 500px;
+nav > div .photoSet .slideshow {
+  width: 320px;
   background: white;
   display: block;
-  height: 300px;
+  height: 200px;
   position: relative;
   overflow: hidden;
 }
 
-.slideshow .slide {
+nav > div .slideshow .slide {
   background: black;
   position: absolute;
   top: 0;
@@ -137,36 +132,22 @@ main {
   -o-transition: all 1s ease-in-out;
 }
 
-.slideshow .slide img {
+nav > div .slideshow .slide div {
+  height: 20px;
+  font-size: 0.7em;
+}
+
+nav > div .slideshow .slide img {
   max-width: 100%;
   width: auto;
-  height: 100%;
+  height: 180px;
 }
 
-.slideshow .slide .caption {
-  background: black;
-  color: white;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding: 0.5em 0.25em;
-  opacity: 0.6;
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 11px;
-  font-style: normal;
-  font-weight: normal;
-  text-transform: uppercase;
-  letter-spacing: normal;
-  line-height: 1.6em;
-  -webkit-transition: all 0.5s ease-out;
-  -moz-transition: all 0.5s ease-in-out;
-  -o-transition: all 0.5s ease-in-out;
-  text-shadow: rgba(200, 200, 200, 0.6) 1px 1px 1px;
-}
-
-.slideshow .slide:hover .caption {
-  opacity: 1;
+main {
+  background: #cfcfcf;
+  color: black;
+  padding: 20px 0;
+  flex-grow: 1;
 }
 
 footer {
