--- a/profile/profile.css
+++ b/profile/profile.css
@@ -53,13 +53,7 @@ a:active {
 }
 
 h1 {
-  padding: 150px 0 50px 0;
-  font-size: 6em;
-}
-
-h3 {
-  font-size: 2em;
-  padding: 0 0 30px 0;
+  padding: 10px 0;
 }
 
 table,
@@ -118,6 +112,66 @@ header div.common-container > ul > li {
   cursor: pointer;
 }
 
+nav > ul {
+  display: flex;
+  justify-content: center;
+  /* border-top: 1px solid #616161; */
+  border-bottom: 1px solid #616161;
+  color: #fff;
+}
+
+nav > ul > a > li,
+nav > ul > li {
+  padding: 10px 20px;
+}
+
+nav > ul > li:last-child {
+  border-right: 3px solid #111;
+}
+
+nav > div .mainArea {
+  width: 100%;
+  height: 380px;
+}
+
+nav > div .post {
+  margin: 0 auto;
+  width: 480px;
+  height: 100%;
+}
+
+nav > div .photoSet .slideshow {
+  width: 480px;
+  display: block;
+  height: 360px;
+  position: relative;
+  overflow: hidden;
+}
+
+nav > div .slideshow .slide {
+  background: black;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  -webkit-transition: all 1s ease-in-out;
+  -moz-transition: all 1s ease-in-out;
+  -o-transition: all 1s ease-in-out;
+}
+
+nav > div .slideshow .slide div {
+  height: 20px;
+  font-size: 0.7em;
+}
+
+nav > div .slideshow .slide img {
+  max-width: 100%;
+  width: auto;
+  height: 360px;
+}
+
 main {
   color: black;
   padding: 20px 0;
@@ -125,12 +179,42 @@ main {
 }
 
 main > div.common-container {
+  flex-grow: 1;
   padding: 5px;
-  color: white;
 }
 
-main > div.common-container > div.content-container {
-  max-width: 700px;
+main > div.common-container > table {
   margin: 0 auto;
+}
+
+footer {
+  color: white;
+  font-size: 0.7em;
+  border-top: 1px solid #616161;
+}
+
+footer > div.common-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer > div.common-container > span:first-child {
+  display: flex;
+  flex-direction: row;
   text-align: left;
+  padding: 5px 0;
+}
+
+footer > div.common-container > span:first-child > span {
+  margin-right: 20px;
+}
+
+footer > div.common-container > span:nth-child(2) > a {
+  font-size: 2em;
+}
+
+footer > div:nth-child(2) {
+  /* border-top: 1px solid #616161; */
+  padding: 5px 0;
 }
