--- a/style/common.css
+++ b/style/common.css
@@ -162,6 +162,17 @@ div#paragraph-ume > div:nth-child(2) > span img {
   min-width: 700px;
 }
 
+div#paragraph-mirae > div:nth-child(2) {
+  padding: 10px;
+}
+
+div#paragraph-mirae > div:nth-child(2) > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 20px;
+}
+
 .common-container {
   width: 1130px;
   margin: 0 auto;
